- maj "tools_list" et changement de format (ajout séparateur de chaînes de caractères) - prise en charge de patterns multiples séparés par une virgule - possibilité de commenter des lignes dans "tools_list" via # - maj de la version compilée

--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,3 @@
-https://www.netresec.com/?download=NetworkMiner
-https://www.apacheviewer.com/download/
-https://github.com/Lazza/RecuperaBit
-https://github.com/jschicht/Indx2Csv
+
+winpmem
+orc
